--- a/Atividade Aula 2.3/2_3_1_LinearRegressionIris_Tensor.ipynb
+++ b/Atividade Aula 2.3/2_3_1_LinearRegressionIris_Tensor.ipynb
@@ -749,7 +749,7 @@
         "    # gradiente descendente:update weights\n",
         "    #model.w = model.w - learning_rate * w_grad.T\n",
         "    # TODO\n",
-        "    model.w =model.w -learning_rate * w_grad\n",
+        "    model.w =model.w -learning_rate * torch.t(w_grad)\n",
         "\n",
         "    # verbose\n",
         "    if (epoch+1) % 20 == 0:\n",
